--- a/style.css
+++ b/style.css
@@ -684,6 +684,7 @@ h3.my-profession {
   .about .about-content .personal-info .info-item p span {
     display: block;
     margin-left: 0;
+    overflow: hidden;
   }
 }
 @media (max-width: 991px) {
