--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ h3.my-profession {
 .about .about-content .timeline .timeline-date .fa {
   margin-right: 5px;
   position: relative;
-  top: 10px;
+  top: 0px;
 }
 .about .about-content .timeline .timeline-title {
   font-weight: 700;
@@ -684,6 +684,7 @@ h3.my-profession {
   .about .about-content .personal-info .info-item p span {
     display: block;
     margin-left: 0;
+    overflow: hidden;
   }
 }
 @media (max-width: 991px) {
